# Fieldwire-Task-Creation-XY-Coordinates

./: LICENSE  README.md  fieldwire_tasks_xy_gui.py  fieldwire_tasks_xy_gui.spec  setup.cfg  setup.py
