[metadata]
name = example-package
version = 0.0.1
author = Andrea Sebastio
author_email = andrea.sebastio@hilti.com
description = shop drawings fieldwiere x-y exporter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = package_name